fix description overflow bug

--- a/app/assets/stylesheets/smart_phone/app_item/show.css.scss
+++ b/app/assets/stylesheets/smart_phone/app_item/show.css.scss
@@ -69,9 +69,13 @@
 
 .app-description-container {
   padding: 10px;
-  font-size: 12px;
+  font-size: 10px;
   background-color: $gray-dark;
   color: white;
+  overflow: hidden;
+  p {
+    word-wrap: break-word;
+  }
 }
 
 .check-bonus-btn {
